--- a/app/src/main/res/menu/menuowner.xml
+++ b/app/src/main/res/menu/menuowner.xml
@@ -6,4 +6,9 @@
         android:icon="@drawable/logout"
         android:id="@+id/ownermenu"
         ></item>
+    <item android:title="Logout"
+        app:showAsAction="always"
+        android:icon="@drawable/logout"
+        android:id="@+id/search"
+        ></item>
 </menu>
