--- a/app/src/main/res/layout/activity_add_labour_details.xml
+++ b/app/src/main/res/layout/activity_add_labour_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -32,7 +33,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginEnd="@dimen/_16sdp"/>
+        android:layout_marginEnd="@dimen/_16sdp" />
 
     <EditText
         android:id="@+id/etMobileNumber"
@@ -47,7 +48,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginEnd="@dimen/_16sdp"/>
+        android:layout_marginEnd="@dimen/_16sdp" />
 
     <EditText
         android:id="@+id/etAddress"
@@ -62,7 +63,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginEnd="@dimen/_16sdp"/>
+        android:layout_marginEnd="@dimen/_16sdp" />
 
     <EditText
         android:id="@+id/etHourlyWage"
@@ -77,7 +78,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginEnd="@dimen/_16sdp"/>
+        android:layout_marginEnd="@dimen/_16sdp" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/etDob"
@@ -93,7 +94,7 @@
         android:layout_marginTop="@dimen/_8sdp"
         android:layout_marginStart="@dimen/_16sdp"
         android:layout_marginEnd="@dimen/_16sdp"
-        android:onClick="showDatePicker"/>
+        android:onClick="showDatePicker" />
 
     <EditText
         android:id="@+id/etProfession"
@@ -108,7 +109,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginEnd="@dimen/_16sdp"/>
+        android:layout_marginEnd="@dimen/_16sdp" />
 
     <EditText
         android:id="@+id/etAboutInfo"
@@ -123,42 +124,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginEnd="@dimen/_16sdp"/>
+        android:layout_marginEnd="@dimen/_16sdp" />
 
-    <!-- New RadioGroup for Availability -->
-    <RadioGroup
-        android:id="@+id/radioGroupAvailability"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/etAboutInfo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginEnd="@dimen/_16sdp">
-
-        <RadioButton
-            android:id="@+id/rbAvailable"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Available"
-            android:layout_marginEnd="@dimen/_16sdp"/>
-
-        <RadioButton
-            android:id="@+id/rbNotAvailable"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Not Available"/>
-    </RadioGroup>
-
-    <!-- Gender RadioGroup -->
     <RadioGroup
         android:id="@+id/radioGroupGender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/radioGroupAvailability"
+        app:layout_constraintTop_toBottomOf="@id/etAboutInfo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="@dimen/_16sdp"
@@ -169,17 +142,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Male"
-            android:layout_marginEnd="@dimen/_16sdp"/>
+            android:layout_marginEnd="@dimen/_16sdp" />
+
         <RadioButton
             android:id="@+id/rbFemale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Female"/>
+            android:text="Female" />
+
         <RadioButton
             android:id="@+id/rbOther"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Other"/>
+            android:text="Other" />
     </RadioGroup>
 
     <Button
@@ -194,5 +169,18 @@
         android:layout_marginTop="@dimen/_16sdp"
         android:layout_marginStart="@dimen/_16sdp"
         android:layout_marginEnd="@dimen/_16sdp"
-        android:background="@drawable/button"/>
+        android:background="@drawable/button" />
+
+    <Button
+        android:id="@+id/btnStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Status"
+        android:textColor="@color/white"
+        android:background="@drawable/button"
+        app:layout_constraintTop_toBottomOf="@id/btnRegister"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/_16sdp"
+        android:layout_marginEnd="@dimen/_16sdp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
